--- a/source/less/catalog/link-catalog.less
+++ b/source/less/catalog/link-catalog.less
@@ -1,8 +1,21 @@
+.link-catalog img {
+  display: block;
+}
+
 .link-catalog__card {
   background-color: #ffffff;
-  padding: 25px 30px;
+  padding: 34px 27px 25px;
   border: 1px solid #ececec;
   margin-top: -6px;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.link-catalog__title a {
+  text-decoration: none;
 }
 
 .link-catalog__card-name {
@@ -11,6 +24,8 @@
   font-size: 17px;
   line-height: 24px;
   color: #000000;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
 }
 
 .link-catalog__card span {
@@ -49,6 +64,45 @@
   display: none;
 }
 
+.link-catalog:hover ~ .link-catalog__card {
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+}
+
+.link-catalog:active ~ .link-catalog__card {
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.link-catalog__card-name:hover {
+  opacity: 0.6;
+}
+
+.link-catalog__card-name:active {
+  opacity: 0.3;
+}
+
+.link-catalog__card-price svg {
+  opacity: 0.2;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+}
+
+.link-catalog__card-price svg:hover {
+  opacity: 1;
+  fill: @lg;
+}
+
+.link-catalog__card-price svg:active {
+  opacity: 0.3;
+}
+
+.link-catalog__card:hover {
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+}
+
+.link-catalog__card:active {
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+
 @media (min-width: @tablet-width) {
   .link-catalog__img-mobile {
     display: none;
@@ -69,13 +123,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 25px 39px 25px 34px;
+    padding: 27px 39px 25px 32px;
     width: 334px;
-    height: 334px;
+    min-height: 334px;
   }
 
   .link-catalog__card-name {
     font-size: 20px;
+    margin-bottom: 7px;
   }
 
   .link-catalog__card span {
@@ -94,8 +149,13 @@
 @media (min-width: @desktop-width) {
   .link-catalog__card {
     width: 316px;
-    height: 197px;
+    min-height: 199px;
     margin-top: -1px;
+    padding: 28px 30px 25px 27px;
+  }
+
+  .link-catalog__card-name {
+    margin-bottom: 5px;
   }
 
   .link-catalog__img-tablet {
