--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,12 +1,15 @@
 //General
 @import "./general/interface.less";
 @import "./general/variables.less";
-@import "./general/header.less";
+@import "./general/main-header.less";
 @import "./general/footer.less";
-@import "./general/nav.less";
 @import "./general/modal.less";
 @import "./general/block.less";
-@import "./general/header-menu.less";
+@import "./general/zigzag.less";
+@import "./general/user-list.less";
+@import "./general/fonts.less";
+@import "./general/navigation-list.less";
+@import "./general/bottom-sale.less";
 
 // Index
 @import "./index/main.less";
