--- a/source/less/form/filter-form.less
+++ b/source/less/form/filter-form.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   width: 262px;
 }
 
@@ -13,7 +13,11 @@
   background-color: @lg;
 }
 
-.filter-form__title span {
+.filter-form__title hr.mail {
+  width: 182px;
+}
+
+.filter-form__title label {
   font-weight: @bold;
   font-size: 17px;
   line-height: 16px;
@@ -27,20 +31,12 @@
   flex-direction: column;
 }
 
-.filter-form__input span {
-  font-weight: @bold;
-  font-size: 17px;
-  line-height: 18px;
-}
-
 .filter-form__input:not(:last-child) {
   margin-bottom: 23px;
 }
 
 
-.filter-form__input input[type="text"],
-input[type="tel"],
-input[type="email"] {
+.filter-form__input .product__input-string {
   border: none;
   border-bottom: 2px solid #000000;
   width: 260px;
@@ -49,10 +45,40 @@ input[type="email"] {
   font-weight: 400;
   font-size: 17px;
   line-height: 18px;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+  background-color: transparent;
+  padding-right: 60px;
 }
 
-.filter-form__input input::placeholder {
+.filter-form__input {
+  position: relative;
+}
+
+.filter-form__input svg {
+  position: absolute;
+  right: 3px;
+  top: 13px;
+  width: 31px;
+  height: 27px;
+  opacity: 0.2;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+}
+
+.filter-form__input:hover svg {
+  opacity: 1;
+  fill: @lg;
+}
+
+.filter-form__input:focus-within svg {
+  opacity: 1;
+  fill: @lg;
+}
+
+.product__input-string::placeholder {
   color: rgba(0, 0, 0, 0.3);
+  max-width: 450px;
 }
 
 .filter-form__input textarea {
@@ -62,14 +88,35 @@ input[type="email"] {
   height: 142px;
   outline: none;
   padding: 17px 0 0 17px;
-  margin-top: 22px;
   font-weight: 400;
   font-size: 17px;
   line-height: 18px;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
 }
 
 .filter-form__input textarea::placeholder {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.filter-form__input:hover input {
+  border-bottom: 2px solid @lg;
+}
+
+.filter-form__input:focus-within input {
+  border-bottom: 2px solid @lg;
+}
+
+.filter-form__input:hover textarea {
+  border: 2px solid @lg;
+}
+
+.filter-form__input:focus-within textarea {
+  border: 2px solid @lg;
+}
+
+.filter-form__input-extra {
+  margin-top: -6px;
 }
 
 @media (min-width: @tablet-width) {
@@ -88,28 +135,41 @@ input[type="email"] {
   }
 
   .filter-form__title {
-    max-width: 107px;
-    width: 100%;
+    width: 107px;
     margin-bottom: 0;
     margin-right: 62px;
   }
 
-  .filter-form__input input[type="text"],
-  input[type="tel"],
-  input[type="email"] {
+  .filter-form__input .product__input-string {
     width: 501px;
+    padding-left: 17px;
+  }
+
+  .filter-form__input:not(:last-child) {
+    margin-bottom: 21px;
   }
 
   .filter-form__input textarea {
     width: 501px;
+    font-size: 19px;
   }
 
-  // .filter-form--grey {
-  //   background-color: #e5e5e5;
-  //   max-width: 100%;
-  //   width: 100%;
-  //   padding: 50px;
-  // }
+  .filter-form__input svg {
+    right: 20px;
+  }
+
+  .filter-form--textarea {
+    margin-top: 67px;
+    font-size: 19px;
+  }
+
+  .filter-form--textarea .filter-form__title {
+    margin-right: 60px;
+  }
+
+  .filter-form__input-extra {
+    margin-top: -1px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -120,19 +180,22 @@ input[type="email"] {
 
   .filter-form__title {
     width: 107px;
+    margin-right: 8px;
   }
 
   .filter-form__input {
     flex-basis: 33%;
   }
 
-  .filter-form__input input[type="text"],
-  input[type="tel"],
-  input[type="email"] {
+  .filter-form__input .product__input-string {
     width: 698px;
   }
 
   .filter-form__input textarea {
     width: 698px;
+  }
+
+  .filter-form--textarea .filter-form__title {
+    margin-right: 8px;
   }
 }
