--- a/source/less/form/product-form.less
+++ b/source/less/form/product-form.less
@@ -1,19 +1,107 @@
 .product-form__user {
-  .form__filter {
+  .filter-form {
     border: none;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
 
-  .form__filter:not(:last-child) {
-    margin-bottom: 30px;
+  .filter-form__title {
+    margin-bottom: 29px;
+    position: relative;
+  }
+
+  .filter-form__title-label::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 202px;
+    height: 1px;
+    background-color: @lg;
+  }
+
+  .filter-form__title-label--email::after {
+    width: 184px;
+  }
+
+  .filter-form--grey .filter-form:first-child {
+    padding-top: 33px;
+    margin-bottom: 34px;
+  }
+
+  .filter-form--grey .filter-form:last-child {
+    padding-bottom: 34px;
+  }
+
+  .filter-form--grey::before {
+    content: "";
+    width: 100%;
+    height: 228px;
+    position: absolute;
+    background-color: #f1f1f1;
+    left: 0;
+    z-index: -1;
+    display: none;
   }
 }
 
+.product-form__user .filter-form--grey .filter-form__title {
+  margin-bottom: 5px;
+}
+
 @media (min-width: @tablet-width) {
+  .product-form__user {
+    margin-top: 32px;
+  }
+
+  .product-form__user .filter-form__title {
+    margin-top: 19px;
+    margin-right: 116px;
+  }
+
+  .product-form__user .filter-form__title-label::after {
+    display: none;
+  }
+
   .product-form__user .form__filter {
     display: flex;
     flex-direction: row;
+  }
+
+  .product-form__user .filter-form--grey {
+    margin-top: 51px;
+  }
+
+  .product-form__user .filter-form--grey::before {
+    display: block;
+  }
+
+  .product-form__user .filter-form--grey .filter-form:first-child {
+    padding-top: 50px;
+    margin-bottom: 24px;
+  }
+
+  .product-form__user .filter-form--grey .filter-form__title {
+    margin-top: 16px;
+    margin-right: 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .product-form__user {
+    margin-top: 25px;
+  }
+
+  .product-form__user .filter-form--grey .filter-form__title {
+    margin-right: 8px;
+  }
+
+  .product-form__user .filter-form__title {
+    margin-right: 9px;
+  }
+
+  .product-form__user .filter-form--grey .filter-form:first-child {
+    margin-bottom: 23px;
   }
 }
