--- a/source/less/general/footer.less
+++ b/source/less/general/footer.less
@@ -1,43 +1,50 @@
 .footer {
-  background-color: #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  padding: 25px 30px;
+  padding: 0 30px 15px;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  background-color: #f1f1f1;
+  width: 100%;
+  height: 160px;
+  z-index: -1;
 }
 
 .footer__logo {
   display: none;
+  cursor: pointer;
 }
 
 .footer__list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 142px;
-  margin-bottom: 28px;
+  display: grid;
+  grid-template-columns: 28px 28px 28px;
+  gap: 29px;
+  list-style: none;
+  padding: 25px 0 28px;
+}
+
+.footer__item {
+  flex-basis: 33%;
 }
 
 .footer__link {
   color: #444444;
 }
 
-.footer hr {
-  background-color: #e5e5e5;
-  width: 260px;
-  height: 1px;
-  border: none;
-}
-
 .footer__copyright {
-  margin-top: 28px;
+  margin-top: 17px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .footer__copyright b {
@@ -47,14 +54,73 @@
   margin-right: 27px;
 }
 
-@media (min-width: 768px) {
+.footer__copyright::before {
+  content: "";
+  position: absolute;
+  top: -22px;
+  left: -39px;
+  background-color: #e5e5e5;
+  width: 260px;
+  height: 1px;
+}
+
+.footer__logo svg {
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+}
+
+.footer__logo svg:hover {
+  fill: @lg;
+}
+
+.footer__logo svg:active {
+  opacity: 0.3;
+}
+
+.footer__link svg {
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+}
+
+.footer__link svg:hover {
+  fill: @lg;
+}
+
+.footer__link svg:active {
+  opacity: 0.3;
+}
+
+.footer__copyright svg {
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+}
+
+.footer__copyright:hover svg {
+  opacity: 0.6;
+}
+
+.footer__copyright:active svg {
+  opacity: 0.3;
+}
+
+.footer__copyright a:focus-visible {
+  opacity: 0.6;
+  outline: none;
+}
+
+@media (min-width: @tablet-width) {
   .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    margin: 0 -50px;
-    padding: 51px 50px 58px;
+    margin: 0 auto;
+    max-width: 768px;
+    padding: 43px 0 46px;
+  }
+
+  .footer::before {
+    height: 143px;
   }
 
   .footer__logo {
@@ -62,14 +128,22 @@
   }
 
   .footer__list {
-    margin-bottom: 0;
+    padding: 0;
   }
 
-  .footer hr {
+  .footer__copyright::before {
     display: none;
   }
 
   .footer__copyright {
-    margin-top: 0;
+    margin-top: -5px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer {
+    padding: 42px 0 46px;
+    max-width: 1150px;
+    margin: 0 auto;
   }
 }
