--- a/source/less/index/reviews.less
+++ b/source/less/index/reviews.less
@@ -1,6 +1,7 @@
 .reviews {
-  padding: 0 30px 45px 30px;
-  margin-top: 58px;
+  padding: 0 30px 34px;
+  max-width: 320px;
+  margin: 58px auto 0 auto;
 }
 
 .reviews__title {
@@ -9,6 +10,8 @@
 
 .reviews__title .reviews__button {
   display: none;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
 }
 
 .reviews p {
@@ -32,42 +35,87 @@
   text-align: center;
 }
 
+.reviews__text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 30px;
+  color: #444444;
+  margin-bottom: 33px;
+
+  &--tablet {
+    display: none;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .reviews {
     background-image: url("../img/index/review.png");
     background-repeat: no-repeat;
     background-position: left;
+    padding: 82px 0 53px 50px;
+    max-width: 768px;
+    margin: 51px auto 68px auto;
     margin-left: -50px;
-    padding: 82px 0 47px 50px;
-    margin-top: 0;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index/review-tablet@2x.png");
+      background-size: contain;
+    }
   }
 
   .reviews__title {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 40px;
-  }
-
-  .reviews p {
-    margin-bottom: 60px;
-    font-size: 17px;
+    margin-bottom: 35px;
   }
 
   .reviews__title .reviews__button {
-    padding: 14px 35px;
+    padding: 14px 36px;
     display: block;
+    margin-top: -10px;
   }
 
   .reviews__button {
     display: none;
   }
+
+  .reviews__button:hover {
+    color: #ffffff;
+    background-color: #444444;
+  }
+
+  .reviews__button:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  .reviews__text {
+    margin-bottom: 60px;
+    font-size: 17px;
+
+    &--mobile {
+      display: none;
+    }
+
+    &--tablet {
+      display: block;
+    }
+  }
 }
 
 @media (min-width: @desktop-width) {
   .reviews {
-    margin: 0;
-    padding: 78px 0 96px 174px;
+    max-width: 1150px;
+    margin: 0 auto 67px auto;
+    padding: 79px 0 101px 175px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index/review-desktop@2x.png");
+    }
+  }
+
+  .reviews__title {
+    margin-bottom: 31px;
   }
 
   .reviews__title h2 {
@@ -75,7 +123,9 @@
     line-height: 57px;
   }
 
-  .reviews p {
+  .reviews__text {
     font-size: 17px;
+    max-width: 814px;
+    margin-bottom: 43px;
   }
 }
