--- a/source/less/general/user-list.less
+++ b/source/less/general/user-list.less
@@ -1,3 +1,8 @@
+.user-list {
+  margin: 0;
+  padding: 0;
+}
+
 .user-list__item {
   list-style: none;
   padding: 27px 0 27px 76px;
@@ -83,7 +88,7 @@
   }
 
   .user-list__item {
-    padding: 33px 32px;
+    padding: 31px 32px;
   }
 
   .user-list__item:last-child {
