--- a/source/less/index/main.less
+++ b/source/less/index/main.less
@@ -1,7 +1,7 @@
 .main__title {
   text-align: center;
 
-  background-image: url("../img/index/hero-mobile@2x.webp");
+  background-image: url("../img/index/hero-mobile.webp");
   background-repeat: no-repeat;
   background-position: 0 -17px;
   background-size: cover;
@@ -50,11 +50,10 @@
 
 .main__link {
   background-color: @lg;
-  padding: 24px 30px 31px;
+  padding: 28px 30px 31px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 103px;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
   text-decoration: none;
@@ -69,6 +68,8 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .main__item span {
@@ -83,7 +84,7 @@
 @media (min-width: @tablet-width) {
   .main__title {
     text-align: center;
-    background-image: url("../img/index/hero-tablet@2x.webp");
+    background-image: url("../img/index/hero-tablet.webp");
     background-repeat: no-repeat;
     background-position: 0% 0%;
     background-size: cover;
@@ -127,15 +128,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
     margin-top: -104px;
   }
 
   .main__link {
     flex-basis: 50%;
     // height: 119px;
-    padding: 24px 36px 31px 35px;
-    height: 119px;
+    padding: 14px 36px 28px;
   }
 
   .main__link svg {
@@ -180,7 +179,7 @@
   }
 
   .main__title {
-    background-image: url("../img/index/hero-desktop@2x.webp");
+    background-image: url("../img/index/hero-desktop.webp");
     background-repeat: no-repeat;
     background-position: 0% 0%;
     background-size: cover;
