--- a/source/less/catalog/link-catalog.less
+++ b/source/less/catalog/link-catalog.less
@@ -19,13 +19,13 @@
 }
 
 .link-catalog__card-name {
-  margin-bottom: 5px;
   font-weight: @bold;
   font-size: 17px;
   line-height: 24px;
   color: #000000;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
+  margin: 0 0 5px 0;
 }
 
 .link-catalog__card span {
