--- a/source/less/catalog/production.less
+++ b/source/less/catalog/production.less
@@ -21,7 +21,8 @@
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  margin-left: 25px;
+  margin: 0 0 0 25px;
+  padding: 0;
 }
 
 .production__text {
