--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "./general/fonts.less";
 @import "./general/navigation-list.less";
 @import "./general/bottom-sale.less";
+@import "./general/modal-form.less";
 
 // Index
 @import "./index/main.less";
