--- a/source/less/general/modal.less
+++ b/source/less/general/modal.less
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   display: none;
+  z-index: 3;
 }
 
 .modal--active {
@@ -22,63 +23,29 @@
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   padding: 29px 30px 46px;
   min-width: 320px;
+  z-index: 3;
 }
 
-.modal__title {
+.modal__title span {
   text-align: center;
   text-transform: uppercase;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 700;
 }
 
-.modal p {
+.modal__title p {
   font-weight: 400;
   font-size: 15px;
   line-height: 30px;
   color: #444444;
-  margin-bottom: 21px;
   text-align: center;
+  margin-top: 15px;
+  margin-bottom: 22px;
 }
 
-.modal__size {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin-bottom: 30px;
-}
-
-.modal__size button.modal__size--active {
-  border: 2px solid @lg;
-}
-
-.modal__size button {
-  border: 2px solid rgba(68, 68, 68, 0.1);
-  padding: 16px 33px;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 16px;
-  color: #444444;
-  outline: none;
-}
-
-.modal__button {
-  background-color: @lg;
-  color: #ffffff;
-  border: none;
-  outline: none;
-  padding: 18px 68px;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 16px;
-  text-transform: uppercase;
-}
-
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .modal {
     min-width: 566px;
-    padding: 37px 102px 46px;
-  }
-
-  .modal__size button {
-    padding: 16px 48px;
   }
 }
