--- a/source/less/form/filter-form.less
+++ b/source/less/form/filter-form.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   width: 262px;
 }
 
@@ -13,7 +13,11 @@
   background-color: @lg;
 }
 
-.filter-form__title span {
+.filter-form__title hr.mail {
+  width: 182px;
+}
+
+.filter-form__title label {
   font-weight: @bold;
   font-size: 17px;
   line-height: 16px;
@@ -33,9 +37,7 @@
 }
 
 
-.filter-form__input input[type="text"],
-input[type="tel"],
-input[type="email"] {
+.filter-form__input .product__input-string {
   border: none;
   border-bottom: 2px solid #000000;
   width: 260px;
@@ -44,10 +46,10 @@ input[type="email"] {
   font-weight: 400;
   font-size: 19px;
   line-height: 18px;
-  padding-left: 18px;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
   background-color: transparent;
+  padding-right: 60px;
 }
 
 .filter-form__input {
@@ -56,10 +58,10 @@ input[type="email"] {
 
 .filter-form__input svg {
   position: absolute;
-  right: 0;
-  top: 14px;
-  width: 25px;
-  height: 24px;
+  right: 3px;
+  top: 13px;
+  width: 31px;
+  height: 27px;
   opacity: 0.2;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
@@ -75,8 +77,9 @@ input[type="email"] {
   fill: @lg;
 }
 
-.filter-form__input input::placeholder {
+.product__input-string::placeholder {
   color: rgba(0, 0, 0, 0.3);
+  max-width: 450px;
 }
 
 .filter-form__input textarea {
@@ -114,7 +117,7 @@ input[type="email"] {
 }
 
 .filter-form__input-extra {
-  margin-top: 0;
+  margin-top: -6px;
 }
 
 @media (min-width: @tablet-width) {
@@ -133,20 +136,40 @@ input[type="email"] {
   }
 
   .filter-form__title {
-    max-width: 107px;
-    width: 100%;
+    width: 107px;
     margin-bottom: 0;
     margin-right: 62px;
   }
 
-  .filter-form__input input[type="text"],
-  input[type="tel"],
-  input[type="email"] {
+  .filter-form__input .product__input-string {
     width: 501px;
+    padding-left: 17px;
+  }
+
+  .filter-form__input:not(:last-child) {
+    margin-bottom: 21px;
   }
 
   .filter-form__input textarea {
     width: 501px;
+    font-size: 19px;
+  }
+
+  .filter-form__input svg {
+    right: 20px;
+  }
+
+  .filter-form--textarea {
+    margin-top: 67px;
+    font-size: 19px;
+  }
+
+  .filter-form--textarea .filter-form__title {
+    margin-right: 60px;
+  }
+
+  .filter-form__input-extra {
+    margin-top: -1px;
   }
 }
 
@@ -158,20 +181,22 @@ input[type="email"] {
 
   .filter-form__title {
     width: 107px;
-    margin-right: 22px;
+    margin-right: 8px;
   }
 
   .filter-form__input {
     flex-basis: 33%;
   }
 
-  .filter-form__input input[type="text"],
-  input[type="tel"],
-  input[type="email"] {
+  .filter-form__input .product__input-string {
     width: 698px;
   }
 
   .filter-form__input textarea {
     width: 698px;
+  }
+
+  .filter-form--textarea .filter-form__title {
+    margin-right: 8px;
   }
 }
