--- a/source/less/general/footer.less
+++ b/source/less/general/footer.less
@@ -3,7 +3,9 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  padding: 25px 30px 15px;
+  padding: 0 30px 15px;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .footer::before {
@@ -22,33 +24,28 @@
 }
 
 .footer__list {
+  display: grid;
+  grid-template-columns: 28px 28px 28px;
+  gap: 29px;
+  list-style: none;
+  padding: 25px 0 28px;
   margin: 0;
-  padding: 0;
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 142px;
-  margin-bottom: 28px;
-  margin-top: 25px;
+}
+
+.footer__item {
+  flex-basis: 33%;
 }
 
 .footer__link {
   color: #444444;
 }
 
-.footer hr {
-  background-color: #e5e5e5;
-  width: 260px;
-  height: 1px;
-  border: none;
-}
-
 .footer__copyright {
-  margin-top: 28px;
+  margin-top: 17px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .footer__copyright b {
@@ -56,6 +53,16 @@
   font-size: 19px;
   line-height: 18px;
   margin-right: 27px;
+}
+
+.footer__copyright::before {
+  content: "";
+  position: absolute;
+  top: -22px;
+  left: -39px;
+  background-color: #e5e5e5;
+  width: 260px;
+  height: 1px;
 }
 
 .footer__logo svg {
@@ -97,14 +104,20 @@
   opacity: 0.3;
 }
 
+.footer__copyright a:focus-visible {
+  opacity: 0.6;
+  outline: none;
+}
+
 @media (min-width: @tablet-width) {
   .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    margin: 0 -50px;
-    padding: 44px 50px 46px;
+    margin: 0 auto;
+    max-width: 768px;
+    padding: 43px 0 46px;
   }
 
   .footer::before {
@@ -116,15 +129,22 @@
   }
 
   .footer__list {
-    margin-bottom: 0;
-    margin-top: 0;
+    padding: 0;
   }
 
-  .footer hr {
+  .footer__copyright::before {
     display: none;
   }
 
   .footer__copyright {
-    margin-top: 0;
+    margin-top: -5px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer {
+    padding: 42px 0 46px;
+    max-width: 1150px;
+    margin: 0 auto;
   }
 }
