--- a/source/less/general/interface.less
+++ b/source/less/general/interface.less
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/opensans.woff2") format("woff2");
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/opensansbold.woff2") format("woff2");
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -21,8 +5,15 @@
 }
 
 body,
-span {
-  font-family: "Open Sans", sans-serif;
+span,
+button,
+textarea,
+input {
+  font-family: "Open Sans", "Arial", sans-serif;
+}
+
+body {
+  margin: 0 auto;
 }
 
 .container {
@@ -48,22 +39,17 @@ span {
   overflow: hidden;
 }
 
-button {
-  cursor: pointer;
-  background: #ffffff;
-  border: 2px solid #444444;
-}
-
 @media (min-width: @tablet-width) {
   .container {
     padding: 0 50px;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: @desktop-width) {
   .container {
     padding: 0 50px;
-    max-width: 1150px;
     margin: 0 auto;
+    max-width: 1150px;
   }
 }
