--- a/source/less/index/contact-map.less
+++ b/source/less/index/contact-map.less
@@ -1,7 +1,3 @@
-.contact-map {
-  margin-left: -30px;
-}
-
 .contact-map img:last-child {
   position: absolute;
   top: -60px;
@@ -11,40 +7,27 @@
   margin: auto;
 }
 
-.contact-map__mobile {
-  position: relative;
-}
-
-.contact-map__tablet {
-  display: none;
-}
-
-.contact-map__desktop {
-  display: none;
-}
-
 .contact-map iframe {
   border: none;
   display: block;
+  width: 100%;
+
+  @media (max-width: 320px) {
+    width: 100%;
+  }
 }
 
-@media (min-width: 768px) {
+@media (min-width: @tablet-width) {
   .contact-map {
-    margin: 0;
-  }
-
-  .contact-map__mobile {
-    display: none;
-  }
-
-  .contact-map__tablet {
-    display: block;
-    margin-left: -50px;
-    position: relative;
+    margin: 0 -50px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .contact-map {
+    margin: -79px 0;
+  }
+
   .contact-map__tablet {
     display: none;
   }
@@ -52,5 +35,10 @@
   .contact-map__desktop {
     display: block;
     position: relative;
+  }
+
+  .contact-map iframe {
+    width: 527px;
+    margin-left: -100px;
   }
 }
