--- a/source/less/index/info.less
+++ b/source/less/index/info.less
@@ -1,5 +1,7 @@
 .info {
-  padding: 31px 30px 0;
+  padding: 26px 30px 0;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .info__title {
@@ -22,10 +24,19 @@
   align-items: flex-start;
   justify-content: space-between;
 
+  &--flower {
+    margin-bottom: 30px;
+  }
+
   &--flower svg {
     margin-bottom: 16px;
     width: 33px;
     height: 38px;
+    margin-left: 8px;
+  }
+
+  &--bill {
+    margin-bottom: 35px;
   }
 
   &--bill svg {
@@ -34,33 +45,45 @@
     height: 27px;
   }
 
+  &--heart {
+    margin-bottom: 32px;
+  }
+
   &--heart svg {
     margin-bottom: 21px;
     width: 34px;
     height: 27px;
+    margin-left: 7px;
+  }
+
+  &--ball {
+    margin-bottom: 33px;
   }
 
   &--ball svg {
     margin-bottom: 17px;
     width: 35px;
     height: 34px;
+    margin-left: 3px;
+  }
+
+  &--rocket {
+    margin-bottom: 32px;
   }
 
   &--rocket svg {
     margin-bottom: 26px;
     width: 55px;
     height: 23px;
+    margin-left: -6px;
   }
 
   &--gift svg {
     margin-bottom: 20px;
     width: 33px;
     height: 32px;
+    margin-left: 3px;
   }
-}
-
-.info__item:not(:last-child) {
-  margin-bottom: 32px;
 }
 
 @media (min-width: @tablet-width) {
@@ -68,10 +91,12 @@
     padding-top: 55px;
     padding-left: 0;
     padding-right: 0;
+    max-width: 768px;
+    margin: 0 auto;
   }
 
   .info__title {
-    margin-bottom: 41px;
+    margin-bottom: 42px;
   }
 
   .info__list {
@@ -79,19 +104,25 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    max-width: 634px;
   }
 
   .info__item {
-    flex-basis: 45%;
     font-size: 20px;
     line-height: 22px;
 
     &--flower {
       order: 1;
+      margin-bottom: 57px;
+    }
+
+    &--flower svg {
+      margin-bottom: 19px;
     }
 
     &--bill {
       order: 3;
+      margin-bottom: 63px;
     }
 
     &--heart {
@@ -100,38 +131,68 @@
 
     &--ball {
       order: 2;
+      margin-top: -19px;
+    }
+
+    &--ball svg {
+      margin-bottom: 20px;
     }
 
     &--rocket {
       order: 4;
+      margin-top: -28px;
+    }
+
+    &--rocket svg {
+      margin-bottom: 30px;
     }
 
     &--gift {
       order: 6;
+      margin-top: -38px;
     }
   }
 
-  .info__item:not(:nth-child(5)) {
-    margin-bottom: 60px;
+  .info__item:nth-child(1) {
+    flex-basis: 265px;
+  }
+
+  .info__item:nth-child(2) {
+    flex-basis: 265px;
   }
 
   .info__item:nth-child(3) {
-    margin-bottom: 83px;
+    flex-basis: 265px;
+  }
+
+  .info__item:nth-child(4) {
+    flex-basis: 300px;
+  }
+
+  .info__item:nth-child(5) {
+    flex-basis: 300px;
   }
 
   .info__item:nth-child(6) {
-    margin-bottom: 83px;
+    flex-basis: 300px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .info {
-    padding: 68px 175px;
+    padding: 68px 175px 57px;
+    max-width: 1150px;
+    margin: 0 auto;
   }
 
   .info__title {
     font-size: 53px;
     line-height: 57px;
+    margin-bottom: 39px;
+  }
+
+  .info__list {
+    max-width: 650px;
   }
 
   .info__item {
