--- a/source/less/index/reviews-user.less
+++ b/source/less/index/reviews-user.less
@@ -1,11 +1,13 @@
 .reviews-user__info {
-  margin-bottom: 30px;
+  margin-bottom: 32px;
 }
 
 .reviews-user__info b {
+  display: block;
   font-weight: @bold;
   font-size: 17px;
   line-height: 24px;
+  margin-bottom: 8px;
 }
 
 .reviews-user__info span {
@@ -19,12 +21,31 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 38px;
+  margin-bottom: 36px;
+  outline: 2px solid #ececec;
 }
 
 .reviews-user__arrow {
-  padding: 12px 40px;
+  padding: 13px 40px;
   border: none;
+  transition-timing-function: ease-out;
+  transition-duration: 0.1s;
+  background-color: transparent;
+}
+
+.reviews-user__arrow:hover {
+  opacity: 0.6;
+}
+
+.reviews-user__arrow:active {
+  opacity: 0.3;
+}
+
+.reviews-user__arrow:focus-visible svg {
+  fill: @lg;
+}
+
+.reviews-user__arrow-left {
   outline: 2px solid #ececec;
   transition-timing-function: ease-out;
   transition-duration: 0.1s;
@@ -43,6 +64,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 648px;
   }
 
   .reviews-user__info {
@@ -57,6 +79,7 @@
 
   .reviews-user__info span {
     font-size: 18px;
+    letter-spacing: -0.6px;
   }
 
   .reviews-user__arrow {
@@ -74,5 +97,17 @@
 
   .reviews-user__arrows {
     margin-bottom: 0;
+    margin-top: 10px;
+    outline: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reviews-user {
+    max-width: 856px;
+  }
+
+  .reviews-user__info b {
+    letter-spacing: -0.7px;
   }
 }
